Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,39 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pic-rotary-encoder by anishpsla</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Pic-rotary-encoder : Rotary Encoder for PIC using MikroC C compiler" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Pic-rotary-encoder</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Pic-rotary-encoder</h1>
-        <p class="header">Rotary Encoder for PIC using MikroC C compiler</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/anishpsla/pic-rotary-encoder/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/anishpsla/pic-rotary-encoder/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/anishpsla/pic-rotary-encoder">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/anishpsla/pic-rotary-encoder">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/anishpsla">anishpsla</a></p>
+          <h1 id="project_title">Pic-rotary-encoder</h1>
+          <h2 id="project_tagline">Rotary Encoder for PIC using MikroC C compiler</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/anishpsla/pic-rotary-encoder/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/anishpsla/pic-rotary-encoder/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-mikroc-pic-rotary-encoder-page" class="anchor" href="#welcome-mikroc-pic-rotary-encoder-page"><span class="octicon octicon-link"></span></a>Welcome MikroC PIC Rotary Encoder page.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This is my first project hosted on GitHub.</p>
+
+<p>A rotary encoder, also called a shaft encoder, is an electro-mechanical device that converts the angular position or motion of a shaft or axle to an analog or digital code (Wikipedia). Rotary encoders are widely used in many places in many form. It will be used as Volume control in Car stereos and other electronic equipment.</p>
+
+<p>There are many Rotary Encoder code snippets are available for PIC Microcontroller using MikroC. Most are bulky and hard to understand. In an environment like Microcontroller, the resources are very low and the code should be highly optimized for performance. The code is ported from Arduino code found on a Youtube video. </p>
+
+<p>The code is very simple and self well commented. The code is written for PIC16F877A. The code can be used with any PIC Microcontroller having external interrupt pin.  </p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -62,11 +69,27 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Pic-rotary-encoder maintained by <a href="https://github.com/anishpsla">anishpsla</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-51310436-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+
   </body>
 </html>
