--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Pic-rotary-encoder : Rotary Encoder for PIC using MikroC C compiler" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Pic-rotary-encoder by anishpsla</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Pic-rotary-encoder</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Pic-rotary-encoder</h1>
+        <p class="header">Rotary Encoder for PIC using MikroC C compiler</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/anishpsla/pic-rotary-encoder">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/anishpsla/pic-rotary-encoder/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/anishpsla/pic-rotary-encoder/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/anishpsla/pic-rotary-encoder">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Pic-rotary-encoder</h1>
-          <h2 id="project_tagline">Rotary Encoder for PIC using MikroC C compiler</h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/anishpsla">anishpsla</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/anishpsla/pic-rotary-encoder/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/anishpsla/pic-rotary-encoder/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>
 <a name="welcome-mikroc-pic-rotary-encoder-page" class="anchor" href="#welcome-mikroc-pic-rotary-encoder-page"><span class="octicon octicon-link"></span></a>Welcome MikroC PIC Rotary Encoder page.</h3>
 
@@ -40,46 +39,14 @@
 
 <p>There are many Rotary Encoder code snippets are available for PIC Microcontroller using MikroC. Most are bulky and hard to understand. In an environment like Microcontroller, the resources are very low and the code should be highly optimized for performance. The code is ported from Arduino code found on a Youtube video. </p>
 
-<p>The code is very simple and self well commented. The code is written for PIC16F877A. The code can be used with any PIC Microcontroller having external interrupt pin.  </p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>The code is very simple and self well commented. The code is written for PIC16F877A. The code can be used with any PIC Microcontroller having external interrupt pin.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Pic-rotary-encoder maintained by <a href="https://github.com/anishpsla">anishpsla</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-              <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -89,7 +56,6 @@ $ git checkout gh-pages
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
